<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="C_ACTIVITYS.C1_EntradaABalance">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag1"
        android:textSize="50sp"
        
        android:layout_marginStart="25dp"
        android:layout_marginBottom="10dp"
        android:layout_above="@id/tv_subtitle"/>

    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tag2"
        android:textSize="20sp"
        
        android:layout_marginStart="25dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/usuario_XEt"/>

    <EditText
        android:id="@+id/usuario_XEt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textPassword"
        
        android:layout_above="@id/password_XEt"
        android:background="@drawable/bg_green_square4"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password_XEt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_green_square4"
        android:textSize="15sp" />

    <Button
        android:id="@+id/entrarALaApp_XBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_XEt"
        android:background="@drawable/bg_green_square4"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        
        android:textColor="@android:color/white"
        android:text="@string/login"/>

 </RelativeLayout>
